cmake_minimum_required(VERSION 3.30)
project(TestCompiler)

set(CMAKE_CXX_STANDARD 20)

add_executable(TestCompiler main.cpp
        Lexer/Lexer.cpp
        Lexer/Lexer.hpp
        AST/AST.hpp
        AST/Expression/Expression.hpp
        AST/Expression/Identifier.hpp
        AST/Expression/Literal.hpp
        AST/Expression/BinaryExpression.hpp
        AST/Statement/Statement.hpp
        AST/Statement/VarDeclaration.hpp
        AST/Statement/FunctionDeclaration.hpp
        AST/Statement/ReturnStatement.hpp
        Parser/Parser.cpp
        Parser/Parser.hpp
        Token.hpp
        AST/Expression/CallExpression.hpp
        Parser/StatementRegistry.cpp
        Parser/StatementRegistry.hpp
        Generator/CodeEmmiter.hpp
        Generator/CodeGenRegistry.hpp
        Generator/CodeGenRegistry.cpp
        Generator/CodeGenerator.hpp
        Generator/Emitters/IfEmitter.hpp
        AST/Statement/IfStatement.hpp
        Generator/Emitters/VarEmitter.hpp
        Generator/Emitters/ReturnEmitter.hpp
        Generator/Emitters/BinaryEmitter.hpp
        Generator/Emitters/FunctionEmitter.hpp
        Generator/Emitters/CallEmitter.hpp
        Generator/Emitters/LiteralEmitter.hpp
        Generator/Emitters/IdentifierEmitter.hpp
        Generator/Emitters/TemplateEmitter.hpp
        AST/Statement/TemplateDeclaration.hpp
        AST/Statement/ClassDeclaration.hpp
        Generator/Emitters/ClassEmitter.hpp
        AST/Expression/MemberAccess.hpp
        AST/Expression/MethodCallExpression.hpp
        Generator/Emitters/MethodCallEmitter.hpp
        Generator/Emitters/MemberAcessEmitter.hpp
        AST/Statement/PrintStatement.hpp
        Generator/Emitters/PrintEmitter.hpp
        AST/Statement/StructDeclaration.hpp
        Generator/Emitters/StructEmitter.hpp
        AST/Statement/ExpressionStatement.hpp
        Generator/Emitters/ExpressionStatementEmitter.hpp
        AST/Expression/ArrayLiteral.hpp
        AST/Expression/IndexAccess.hpp
        Generator/Emitters/ArrayLiteralEmitter.hpp
        Generator/Emitters/IndexAccessEmitter.hpp
        AST/Expression/StructLiteral.hpp
        Generator/Emitters/StructLiteralEmitter.hpp
        AST/Expression/UnaryExpression.hpp
        Generator/Emitters/UnaryExpressionEmitter.hpp
        AST/Statement/AssignmentStatement.hpp
        Generator/Emitters/AssignmentEmitter.hpp
        AST/Statement/WhileStatement.hpp
        Generator/Emitters/WhileEmitter.hpp
        AST/Statement/ForStatement.hpp
        Generator/Emitters/ForEmitter.hpp
        AST/Expression/AssignmentExpression.hpp
        AST/SemanticAnalyzer/SemanticAnalyzer.cpp
        AST/SemanticAnalyzer/SemanticAnalyzer.hpp
        AST/SemanticAnalyzer/SymbolTable.cpp
        AST/SemanticAnalyzer/SymbolTable.hpp
        AST/SemanticAnalyzer/SemanticStatementHandlerRegistry.hpp
        AST/SemanticAnalyzer/SemanticStatementHandlerRegistry.cpp
        Errors.hpp
        AST/SemanticAnalyzer/SemanticExpressionHandlerRegistry.cpp
        AST/SemanticAnalyzer/SemanticExpressionHandlerRegistry.hpp
        AST/Statement/ForeachStatement.hpp
        Generator/Emitters/ForeachEmitter.hpp
        AST/Statement/BreakStatement.hpp
        AST/Statement/ContinueEmitter.hpp
        Generator/Emitters/BreakEmitter.hpp
        Generator/Emitters/ContinuteEmitter.hpp
        AST/Statement/MemberAssignmentStatement.hpp
        Generator/Emitters/MemberAssignmentEmitter.hpp
)
